--- a/repeat/data_analysis.ipynb
+++ b/repeat/data_analysis.ipynb
@@ -839,6 +839,32 @@
     "print(np.count_nonzero(fr==0))\n",
     "print(fr)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fr\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_path='/home/zhaobenyan/dataset/output/grating_32x32/contrast6/fr_time1.npz'\n",
+    "file_name = os.path.basename(file_path).split('.')[0].split('_')[0]\n",
+    "print(file_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
