--- a/config/resource.ipynb
+++ b/config/resource.ipynb
@@ -8,10 +8,10 @@
    "source": [
     "import os\n",
     "\n",
-    "patchV1_dir='/home/zhaobenyan/repos/patchV1/'\n",
-    "src_dir='/home/zhaobenyan/repos/patchV1/src/'\n",
-    "setup_dir='/home/zhaobenyan/dataset/setup/'\n",
-    "patchfast='/home/zhaobenyan/dataset/patchfast/'"
+    "patchV1_dir='$HOEM/repos/patchV1/'\n",
+    "src_dir='$HOME/repos/patchV1/src/'\n",
+    "setup_dir='$HOME/dataset/setup/'\n",
+    "patchfast='$HOME/dataset/patchfast/'"
    ]
   },
   {
@@ -190,9 +190,9 @@
    "source": [
     "#以下操作都只需要运行一次\n",
     "#进入 $HOME/repos/patchV1/src 分别执行 compile-nonhpc、gompile-nonhpc 和 rompile-nonhpc 脚本\n",
-    "os.system(f'cd {src_dir}/ && ./compile-nonhpc')\n",
-    "os.system(f'cd {src_dir}/ && ./gompile-nonhpc')\n",
-    "os.system(f'cd {src_dir}/ && ./rompile-nonhpc')"
+    "os.system(f'cd {src_dir}/ && ./compile-nonhpc')  #编译patchfast\n",
+    "# os.system(f'cd {src_dir}/ && ./gompile-nonhpc')\n",
+    "# os.system(f'cd {src_dir}/ && ./rompile-nonhpc')"
    ]
   },
   {
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +676,7 @@
        "'\\nfSample.write((char*)&sampleSize, sizeof(Size));\\nfSample.write((char*)&sample_t0, sizeof(Float));\\n   Float t1 = nt*dt;\\nfSample.write((char*)&t1, sizeof(Float));\\nfSample.write((char*)&nt, sizeof(Size));\\nfSample.write((char*)&nLGN, sizeof(Size));\\nfSample.write((char*)&(LGN_spike_time[0]), nLGN*sizeof(Size));\\nfSample.write((char*)&(sampleID[0]), sampleSize * sizeof(PosInt));\\nfSample.write((char*)&(sample_spikeCount[0]), sampleSize*sizeof(Size));\\n'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -720,6 +720,7 @@
     "      sample_spikeCount = np.fromfile(f, 'u4', sampleSize)\n",
     "      fr = sample_spikeCount/(sample_t1-sample_t0)*1000\n",
     "   LGN_spike_time = LGN_spike_time.reshape((nt,nLGN)).T\n",
+    "   print('nLGN',nLGN)\n",
     "   return LGN_spike_time,fr\n",
     "'''\n",
     "fSample.write((char*)&sampleSize, sizeof(Size));\n",
@@ -736,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +769,7 @@
     }
    ],
    "source": [
-    "bin='/home/zhaobenyan/dataset/grating/grating_32x32_frameRate96_phase=pi/static_color-grid_10.bin'\n",
+    "bin='/home/zhaobenyan/dataset/grating/grating_32x32_frameRate96_phase=pi/static_color-grid_9.bin'\n",
     "x_1,x_2,x_3,x_4,x_5,x_6=read_grating_bin(bin)\n",
     "print(x_1,x_2,x_3,x_4,x_5)\n",
     "print(x_6.shape)"
@@ -776,9 +777,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nLGN 512\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -795,7 +803,7 @@
        " <BarContainer object of 59 artists>)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -812,6 +820,73 @@
    ],
    "source": [
     "LGN_spike_time,fr=read_spike('/home/zhaobenyan/dataset/patchfast/sample_spikeCount_test_1.bin')\n",
+    "plt.hist(fr,bins=np.arange(0,60,1),rwidth=0.7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import struct# 打开文件并以二进制模式读取数据\n",
+    "def read_spike2(filename):\n",
+    "  with open(filename, 'rb') as fSample:\n",
+    "    # 读取数据\n",
+    "    sampleSize = struct.unpack('I', fSample.read(struct.calcsize('I')))[0]\n",
+    "    sample_t0 = struct.unpack('f', fSample.read(struct.calcsize('f')))[0]\n",
+    "    sample_t1 = struct.unpack('f', fSample.read(struct.calcsize('f')))[0]\n",
+    "    nt = struct.unpack('I', fSample.read(struct.calcsize('I')))[0]\n",
+    "    nLGN = struct.unpack('I', fSample.read(struct.calcsize('I')))[0]\n",
+    "    LGN_spike_time = struct.unpack('I'*nLGN, fSample.read(nLGN * struct.calcsize('I')))\n",
+    "    sampleID = struct.unpack('I'*sampleSize, fSample.read(sampleSize * struct.calcsize('I')))\n",
+    "    sample_spikeCount = struct.unpack('I'*sampleSize, fSample.read(sampleSize * struct.calcsize('I')))\n",
+    "    fr=tuple(map(lambda x: x/((sample_t1-sample_t0)*1000), sample_spikeCount))\n",
+    "  # LGN_spike_time = np.array(LGN_spike_time).reshape((nt,nLGN)).T\n",
+    "  return sampleSize,sample_t0,sample_t1,nt,nLGN,sample_spikeCount,LGN_spike_time,fr\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3840 0.0 1000.0 8000 512\n",
+      "(512,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "sampleSize,sample_t0,sample_t1,nt,nLGN,sample_spikeCount,LGN_spike_time,fr=read_spike2('/home/zhaobenyan/dataset/patchfast/sample_spikeCount_test_1.bin')\n",
+    "print(sampleSize,sample_t0,sample_t1,nt,nLGN)\n",
+    "print(np.array(LGN_spike_time).shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/home/zhaobenyan/robustness/config/resource.ipynb Cell 14\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Bzby/home/zhaobenyan/robustness/config/resource.ipynb#X16sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m LGN_spike_time,fr\u001b[39m=\u001b[39mread_spike2(\u001b[39m'\u001b[39m\u001b[39m/home/zhaobenyan/dataset/patchfast/sample_spikeCount_test_1.bin\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bzby/home/zhaobenyan/robustness/config/resource.ipynb#X16sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m plt\u001b[39m.\u001b[39mhist(fr,bins\u001b[39m=\u001b[39mnp\u001b[39m.\u001b[39marange(\u001b[39m0\u001b[39m,\u001b[39m60\u001b[39m,\u001b[39m1\u001b[39m),rwidth\u001b[39m=\u001b[39m\u001b[39m0.7\u001b[39m)\n",
+      "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 2)"
+     ]
+    }
+   ],
+   "source": [
+    "LGN_spike_time,fr=read_spike2('/home/zhaobenyan/dataset/patchfast/sample_spikeCount_test_1.bin')\n",
     "plt.hist(fr,bins=np.arange(0,60,1),rwidth=0.7)"
    ]
   }
