--- a/tools/read_benchmark.ipynb
+++ b/tools/read_benchmark.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ea32f64b-cbfc-47ec-b353-a1e5d5550a04",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
-    "with open('../data/benchmark_static_32pixel.bin') as f:\n",
+    "with open('/home/zhaobenyan/data/benchmark_static_32pixel.bin') as f:\n",
     "    sampleSize = np.fromfile(f,'u4',1)[0]\n",
     "    sampleID = np.fromfile(f,'u4',sampleSize)\n",
     "    sample_nLGN_V1 = np.fromfile(f,'u4',sampleSize)        \n",
@@ -19,16 +19,13 @@
     "    max_sf = np.fromfile(f,'f4',sampleSize)        \n",
     "    gOSI = np.fromfile(f,'f4',sampleSize)  # ori tc 的指标  \n",
     "    zero_middle = np.nonzero(fr_input_lgn != 0)[0]\n",
-    "    \n",
     "    #nozero=np.intersect1d(sampleID,zero_middle)\n",
-    "    #diff=np.setdiff1d(sampleID,zero_middle,assume_unique=True)\n",
-    "    \n",
-    "        \n"
+    "    #diff=np.setdiff1d(sampleID,zero_middle,assume_unique=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "b10244e0-9e0d-4345-8bd2-14fa46ed2651",
    "metadata": {},
    "outputs": [
@@ -65,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "0baeb475",
    "metadata": {},
    "outputs": [
@@ -115,7 +112,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4 (main, Mar 31 2022, 08:41:55) [GCC 7.5.0]"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
