--- a/lgn_field/lgn.ipynb
+++ b/lgn_field/lgn.ipynb
@@ -2,9 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lum in LMS = [0.45436904 0.47353315 0.0720978 ]\n",
+      "[[1.31265115 0.37916654 0.17658182]\n",
+      " [0.37916654 0.43588297 0.06613005]\n",
+      " [0.17658182 0.06613005 1.03101131]]\n",
+      "[[10.82668925 -2.48855249  0.0461736 ]\n",
+      " [-2.48855249  1.38614356 -0.12768065]\n",
+      " [ 0.0461736  -0.12768065  1.15767798]]\n",
+      "18.53509145317477\n",
+      "0.012775991216413523\n",
+      "range_deg = 0.034479770809412, buffer_deg = 0.038327973649240565\n",
+      "UMRtools verison: v1.2\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from PIL import Image\n",
@@ -13,7 +31,9 @@
     "import fileinput\n",
     "import os\n",
     "import sys\n",
-    "from generate import *"
+    "from generate import *\n",
+    "from readPatchOutput import *\n",
+    "from UMRtools import *"
    ]
   },
   {
@@ -284,7 +304,7 @@
     }
    ],
    "source": [
-    "os.system(f'cd {SRC_DIR}/ && ./compile-nonhpc')  #编译patchfast\n",
+    "os.system(f'cd {SRC_DIR}/ && ./compile-nonhpc')  \n",
     "os.system(f'cd {SRC_DIR}/ && ./gompile-nonhpc')\n",
     "os.system(f'cd {SRC_DIR}/ && ./rompile-nonhpc')"
    ]
