--- a/lgn_field/lgn.ipynb
+++ b/lgn_field/lgn.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
        "0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -329,8 +329,8 @@
       "[0.1118034 0.1381966]\n",
       "[1 4]\n",
       "[-0.01024566  0.02049132 -0.01024566  0.02049132]\n",
-      "-0.01011689768354024 0.010116928702644313\n",
-      "-0.010115816521454575 0.010116445089587553\n",
+      "-0.010116899964400716 0.010116694613805018\n",
+      "-0.010116016255492223 0.010116892524636578\n",
       "632 490 501\n",
       "512 32\n",
       "512 parvo cells, 32 magno cells\n",
@@ -361,8 +361,8 @@
       "registers per block: 65536.\n",
       "\n",
       "5 x 1024 = 5120 post-synaptic neurons\n",
-      "V1_x: [-0.0101169, 0.0101169]\n",
-      "V1_y: [-0.0101158, 0.0101164]\n",
+      "V1_x: [-0.0101169, 0.0101167]\n",
+      "V1_y: [-0.010116, 0.0101169]\n",
       "512 LGN neurons, 512 from left eye, 0 from right eye.\n",
       "need 0mb\n",
       "LGN_x: [-0.0339112, 0.0336092]\n",
@@ -382,7 +382,7 @@
       "R = [0.00930372, 0.0246657, 0.0456915] deg\n",
       "right poolSizes: [1024, 0, 0 < 1024]\n",
       "among them 0 would have no connection from LGN, whose average radius is -nan, compared to population mean -nan\n",
-      "left poolSizes: [8, 82.2945, 282 < 1024]\n",
+      "left poolSizes: [8, 82.2055, 272 < 1024]\n",
       "among them 0 would have no connection from LGN, whose average radius is -nan, compared to population mean 0.0197251\n",
       "poolList and R ready\n",
       "None-G,    None-CS,   Single,  Double-CS,   Double-G\n",
@@ -392,39 +392,39 @@
       "mean sfreq: 1 cpRF\n",
       "mean SF suggested based on preset: 37.6832 cpd\n",
       "normed disLGN = 0.60465, dmax = 0.906975\n",
-      "mean SF suggested after connection: 44.7029 cpd\n",
-      "min non-zero SF suggested after connection: 20.6051 cpd\n",
-      "max SF suggested after connection: 155.855 cpd\n",
-      "std SF suggested after connection: 14.3017 cpd\n",
+      "mean SF suggested after connection: 44.7845 cpd\n",
+      "min non-zero SF suggested after connection: 19.9377 cpd\n",
+      "max SF suggested after connection: 379.157 cpd\n",
+      "std SF suggested after connection: 15.0672 cpd\n",
       "4096 nonzero LGN cells\n",
-      "# connections: [0, 16.8423, 28]\n",
+      "# connections: [0, 16.8318, 28]\n",
       "among them 1026 would have no connection from LGN\n",
-      "# nonzero connections: [5, 16.8505, 28]\n",
-      "# totalConnectionStd: 3.99347\n",
+      "# nonzero connections: [3, 16.84, 28]\n",
+      "# totalConnectionStd: 4.0018\n",
       "# totalStrength: [0, 3.99805, 4]\n",
       "# totalStrengthStd: 0.0883668\n",
       "balance ratio On/(On+Off) for On(Lon, Moff) Off(Loff, Mon) subregions for nLGN > 1: \n",
       "0.00:n:0, sf:-nan\n",
-      "0.05:n:0, sf:-nan\n",
-      "0.10:n:2, sf:35.5\n",
-      "0.15:n:7, sf:61.2\n",
-      "0.20:n:7, sf:56.4\n",
-      "0.25:*n:22, sf:46.8\n",
-      "0.30:***n:73, sf:44.7\n",
-      "0.35:*********n:213, sf:46.1\n",
-      "0.40:*******************n:447, sf:45.8\n",
-      "0.45:**********************************n:813, sf:44.4\n",
-      "0.50:******************************************n:1007, sf:43.5\n",
-      "0.55:********************************n:777, sf:44.5\n",
-      "0.60:*****************n:418, sf:44.4\n",
-      "0.65:*********n:216, sf:45.0\n",
-      "0.70:**n:57, sf:45.7\n",
-      "0.75:*n:16, sf:60.0\n",
-      "0.80:n:5, sf:96.3\n",
-      "0.85:n:5, sf:69.9\n",
-      "0.90:n:8, sf:38.6\n",
+      "0.05:n:1, sf:49.2\n",
+      "0.10:n:6, sf:47.8\n",
+      "0.15:n:5, sf:60.5\n",
+      "0.20:n:6, sf:67.7\n",
+      "0.25:*n:18, sf:50.9\n",
+      "0.30:***n:69, sf:43.2\n",
+      "0.35:*********n:204, sf:45.4\n",
+      "0.40:*******************n:447, sf:43.8\n",
+      "0.45:*******************************n:735, sf:44.7\n",
+      "0.50:******************************************n:1007, sf:44.1\n",
+      "0.55:*********************************n:783, sf:44.3\n",
+      "0.60:*********************n:497, sf:45.2\n",
+      "0.65:********n:194, sf:47.0\n",
+      "0.70:***n:80, sf:46.6\n",
+      "0.75:*n:16, sf:44.9\n",
+      "0.80:n:9, sf:60.6\n",
+      "0.85:n:8, sf:55.1\n",
+      "0.90:n:9, sf:76.1\n",
       "0.95:n:0, sf:-nan\n",
-      "1.00:n:1, sf:34.7\n",
+      "1.00:n:0, sf:-nan\n",
       "# nLGN == 1: 0\n",
       "check total = 5120\n",
       "maxList = 28\n",
@@ -442,7 +442,7 @@
       "longRange_sTypeMat[0] set 0 to match longRange_nTypeMat\n",
       "networkSize = 5120\n",
       "0th featureValue range: [-1, -1]\n",
-      "1th featureValue range: [0.000129584, 0.99974]\n",
+      "1th featureValue range: [1.29375e-05, 0.99986]\n",
       "\n",
       " suffix = test_v1\n",
       "max_N[0] = 140\n",
@@ -502,22 +502,22 @@
       "type 0 has 3840 neurons\n",
       "type 1 has 1280 neurons\n",
       "mean Type:    0,    1,    \n",
-      "0: [63/2481, 64.0964][106/2493, 106.269]\n",
-      "1: [14/344, 14][27/713, 28]\n",
+      "0: [63/2482, 64.0964][106/2492, 106.269]\n",
+      "1: [14/344, 14][27/714, 28]\n",
       "max Type:    0,    1,    \n",
-      "0: [111/3839, 84.2857][171/3840, 140]\n",
-      "1: [33/490, 14][47/1188, 28]\n",
+      "0: [112/3839, 84.2857][175/3840, 140]\n",
+      "1: [29/492, 14][48/1195, 28]\n",
       "min Type:    0,    1,    \n",
-      "0: [33/1714, 58.9999][72/1712, 97.9999]\n",
-      "1: [3/182, 14][13/459, 28]\n",
+      "0: [34/1716, 58.9999][72/1719, 97.9999]\n",
+      "1: [4/188, 14][13/460, 28]\n",
       "gap stats in  mean: \n",
       "type 0 has 1280 neurons\n",
       "mean Type:    0,    \n",
-      "0: [0/713, 0]\n",
+      "0: [0/714, 0]\n",
       "max Type:    0,    \n",
-      "0: [0/1188, 0]\n",
+      "0: [0/1195, 0]\n",
       "min Type:    0,    \n",
-      "0: [0/459, 0]\n"
+      "0: [0/460, 0]\n"
      ]
     },
     {
@@ -526,7 +526,7 @@
        "0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
