--- a/lgn_field/generate_input.ipynb
+++ b/lgn_field/generate_input.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -90,49 +90,25 @@
      "output_type": "stream",
      "text": [
       "128 degree per pixel\n",
-      "crest in sRGB: [ 1.5214511  -1.83242368  0.72781358]\n",
-      "valley in sRGB: [-18.30753009   1.0386155    0.67997673]\n",
+      "crest in sRGB: [0.7992093  0.71806023 0.70442258]\n",
+      "valley in sRGB: [0.7992093  0.71806023 0.70442258]\n",
       "0.0011376210071664464 degree per pixel\n",
       "ecc = 0.034479770809412, buffer_ecc = 0.038327973649240565\n",
       "12\n",
       "exact 12 frames in total\n",
       "sharpness=1.0\n",
       "it: 0\n",
-      "sRGB space is not enough to represent the color\n",
-      "(array([-18.30752992,  -1.83242365,   0.67997673]), array([1.5214511 , 1.0386155 , 0.72781358]))\n",
       "it: 1\n",
-      "sRGB space is not enough to represent the color\n",
-      "(array([-18.30752974,  -1.8324236 ,   0.67997673]), array([1.52145109, 1.0386155 , 0.72781358]))\n",
       "it: 2\n",
-      "sRGB space is not enough to represent the color\n",
-      "(array([-18.30752978,  -1.83242361,   0.67997673]), array([1.52145109, 1.0386155 , 0.72781358]))\n",
       "it: 3\n",
-      "sRGB space is not enough to represent the color\n",
-      "(array([-18.30752995,  -1.83242364,   0.67997673]), array([1.5214511 , 1.0386155 , 0.72781358]))\n",
       "it: 4\n",
-      "sRGB space is not enough to represent the color\n",
-      "(array([-18.30752986,  -1.83242359,   0.67997673]), array([1.52145109, 1.0386155 , 0.72781358]))\n",
       "it: 5\n",
-      "sRGB space is not enough to represent the color\n",
-      "(array([-18.30752982,  -1.83242358,   0.67997673]), array([1.52145109, 1.0386155 , 0.72781358]))\n",
       "it: 6\n",
-      "sRGB space is not enough to represent the color\n",
-      "(array([-18.30752998,  -1.83242363,   0.67997673]), array([1.52145109, 1.0386155 , 0.72781358]))\n",
       "it: 7\n",
-      "sRGB space is not enough to represent the color\n",
-      "(array([-18.30752983,  -1.83242358,   0.67997673]), array([1.52145109, 1.0386155 , 0.72781358]))\n",
       "it: 8\n",
-      "sRGB space is not enough to represent the color\n",
-      "(array([-18.30752986,  -1.83242359,   0.67997673]), array([1.52145109, 1.0386155 , 0.72781358]))\n",
       "it: 9\n",
-      "sRGB space is not enough to represent the color\n",
-      "(array([-18.30752995,  -1.83242364,   0.67997673]), array([1.5214511 , 1.0386155 , 0.72781358]))\n",
       "it: 10\n",
-      "sRGB space is not enough to represent the color\n",
-      "(array([-18.30752978,  -1.83242361,   0.67997673]), array([1.52145109, 1.0386155 , 0.72781358]))\n",
-      "it: 11\n",
-      "sRGB space is not enough to represent the color\n",
-      "(array([-18.30752974,  -1.8324236 ,   0.67997673]), array([1.52145109, 1.0386155 , 0.72781358]))\n"
+      "it: 11\n"
      ]
     }
    ],
@@ -160,8 +136,8 @@
     "                        for phase in P:\n",
     "                              crest = np.array([0.5+c, 0.5-c, 0.5]) #contrast和正弦光栅的波峰、波谷在LMS颜色空间的关系\n",
     "                              valley = np.array([0.5-c, 0.5+c, 0.5])\n",
-    "                              video_fn = path + f'static_color-grid_DF{n}'\n",
-    "                              cfg_fn = path + f'static_color-grid_DF{n}_cfg' #XXXcfg.bin储存每张图的参数，可以关注一下这是怎么存的，要关注存的时候的变量类型，是f4还是u4，怎么存就怎么读，\n",
+    "                              video_fn = path + f'gray{n}'\n",
+    "                              cfg_fn = path + f'gray{n}_cfg' #XXXcfg.bin储存每张图的参数，可以关注一下这是怎么存的，要关注存的时候的变量类型，是f4还是u4，怎么存就怎么读，\n",
     "                              f = open(cfg_fn+ '.bin', 'wb') # sf,d,p,c\n",
     "                              np.array([sf]).astype('f4').tofile(f)\n",
     "                              np.array([orient*180/np.pi]).astype('f4').tofile(f) #generate_grating需要弧度制，但是我参数保存的角度制\n",
@@ -179,7 +155,7 @@
     "      \n",
     "def main():\n",
     "      # C = np.arange(0.05,0.55,0.05) # contrast\n",
-    "      C=np.array([0.45])\n",
+    "      C=np.array([0])\n",
     "      #P = np.arange(0,1,1)#0 相位\n",
     "      P=np.array([0.5*np.pi])\n",
     "      SF = np.arange(30,40,10)#37\n",
