--- a/lgn_field/lgn.ipynb
+++ b/lgn_field/lgn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -8873,7 +8873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8923,31 +8923,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "inputfile='/home/zhaobenyan/model/resource/static_color-grid_test1.bin'\n",
+    "inputfile='/home/zhaobenyan/model/data_save/gratings/gray1.bin'\n",
     "outputfile='/home/zhaobenyan/model/patchfast/sample_spikeCount-merge_test_1.bin'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-1] [ 1 32 32] [0.5 0.5 0.5] [0.03832797 0.03447977] [1] (3072,)\n"
+      "[-1] [ 12 128 128] [0.5 0.5 0.5] [0.03832797 0.03447977] [1] [0.5 0.5 0.5 ... 0.5 0.5 0.5]\n"
      ]
     }
    ],
    "source": [
     "x_1,x_2,x_3,x_4,x_5,x_6=read_grating_bin(inputfile)\n",
-    "print(x_1,x_2,x_3,x_4,x_5,x_6.shape)\n",
-    "LGN_spike_time,fr=read_spike(outputfile)\n"
+    "print(x_1,x_2,x_3,x_4,x_5,x_6)\n",
+    "# LGN_spike_time,fr=read_spike(outputfile)\n"
    ]
   },
   {
